# Classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .talismanrc  Dockerfile  HOWTO.md  Process Results.ipynb  README.md  aws_params.config  license.txt  local_params.config  main.nf  nextflow.config  nextflow_docs.md  pyproject.toml  requirements.txt  test_gpu.py
configs/: 36class.json  63class.json  augmentations_baf.json  augmentations_ir.json  augmentations_oct.json  example_config.json  hparam_set_6b.json  hparam_set_6b_mini.json
data/: README.md
e2g-demo/: HowTo-E2G-Flower.md  README.md  compose.yaml  pyproject.toml  superexec.Dockerfile  supernode.Dockerfile
e2g-demo/e2gflower/: client_app.py  server_app.py  task.py
models/: __init__.py  base.py  coatnet.py  convnext.py  custom.py  data.py  inception_resnetv2.py  inceptionv3.py  learning_rates.py  nasnetlarge.py  swintransformer.py  vgg16.py
nextflow/: README.md  local.nf  local_params.config  main.nf  nextflow.config
