[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2g-demo"
version = "1.0.0"
description = "Federated Learning with E2G and Flower using AWS and NextFlow"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.13.0",
    "filelock==3.15.4",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "tensorflow>=2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "e2gflower.server_app:app"
clientapp = "e2gflower.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 0.5
batch-size = 128

[tool.flwr.federations]
default = "e2gdemo"
#default = "local-simulation"

[tool.flwr.federations.e2gdemo]
address = "localhost:9093"
insecure = true

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.25 # at most 4 ClientApps will run in a given GPU
